
Oops, missed one. :(
----------------------------------------------------------------------
Wed Nov  3 18:17:52 2004                        Michael Jennings (mej)

Small patch for building against libast 0.6.1.

Fixed compile error when enabling OFFIX_DND support pointed out by JG
Miller <miller@yoyo.org>.
----------------------------------------------------------------------
Sun Nov  7 15:37:43 2004                        Michael Jennings (mej)

Fixed minor typo.
----------------------------------------------------------------------
Tue Dec 14 17:13:02 2004                        Michael Jennings (mej)

0.9.3 release
----------------------------------------------------------------------
Tue Dec 14 17:22:23 2004                        Michael Jennings (mej)

The benefits of being a passenger on a long road trip...  The
beginnings of EWMH opacity (a la xcompmgr) support and (hopefully)
UTF-8 support.  Both as yet untested.
----------------------------------------------------------------------
Fri Dec 17 16:35:31 2004                        Michael Jennings (mej)

Another attempt (and failure) at UTF-8 support.  Disabled until
someone can help me out.

If you know iconv(), please have a look at the FIXME_BLOCK starting at
line 3509 of src/command.c.
----------------------------------------------------------------------
Mon Dec 20 14:31:33 2004                        Michael Jennings (mej)

Okay, so my first problem was that I didn't pay close enough attention
to the iconv_open() man page and got the parameter order wrong.  Duh.
Thanks to Sytse Wielinga <s.b.wielinga@student.utwente.nl> for
noticing that.

kwo suggested using XmbDrawString(), but that causes font problems I'm
not ready to diagnose just yet.
----------------------------------------------------------------------
Wed Jan  5 15:17:51 2005                        Michael Jennings (mej)

Spec dependency fixes.
----------------------------------------------------------------------